# MedExplain-AI

./: .dockerignore  .gitignore  DEPLOYMENT.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: auth.py  chat.py  export.py  reports.py  trends.py  users.py
backend/app/core/: __init__.py  concurrency.py  config.py  db.py  exceptions.py  logging.py  security.py
backend/app/crud/: __init__.py  abnormal_finding.py  biomarker.py  chat_message.py  chat_session.py  doctor_question.py  report.py  report_file.py  summary.py  user.py
backend/app/db/: __init__.py  init.sql  reconcile.py  seed.py
backend/app/models/: __init__.py  abnormal_finding.py  base.py  biomarker.py  chat_message.py  chat_session.py  doctor_question.py  report.py  report_file.py  summary.py  user.py
backend/app/safety/: __init__.py  disclaimer.py  guard.py  refusal_templates.py  triggers.py
backend/app/schemas/: __init__.py  auth.py  biomarker.py  chat.py  common.py  doctor_question.py  export.py  report.py  summary.py  trend.py  user.py
backend/app/services/: __init__.py  abnormality_service.py  analysis_pipeline.py  catalog.py  chat_service.py  doc_service.py  explanation_service.py  export_service.py  extraction_service.py  kb.py  llm_service.py  ocr_service.py  semantic_index.py  trend_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_chat_api.py  test_export_api.py  test_lifecycle.py  test_pipeline_contracts.py  test_reports_api.py  test_trends_api.py
backend/tests/safety/: test_kb_lint.py  test_safety_guard.py
backend/tests/unit/: test_abnormality.py  test_chat_service.py  test_config_guards.py  test_doc_service.py  test_explanation.py  test_extraction.py  test_kb.py  test_security.py  test_trend.py
docs/: 00-design-review.md  01-architecture.md  02-folder-structure.md  03-database-schema.md  04-api-spec.md  05-ui-wireframes.md  06-roadmap.md  07-safety-and-compliance.md  08-rag-design.md  09-review-resolution.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/reports/[id]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/trends/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: disclaimer-footer.tsx  dropdown.tsx  severity-badge.tsx  top-nav.tsx  trend-chart.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.tsx  types.ts
knowledge_base/: cholesterol.md  creatinine.md  glucose.md  hemoglobin.md  iron.md  platelets.md  rbc.md  thyroid.md  vitamin_d.md  wbc.md
tests/: README.md
tests/e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: account.spec.ts  auth.spec.ts  chat.spec.ts  helpers.ts  trends.spec.ts  upload-analyze.spec.ts
